Alignment issue fix

--- a/src/app/mutualfunds/mutualfunds.component.scss
+++ b/src/app/mutualfunds/mutualfunds.component.scss
@@ -25,7 +25,7 @@
     list-style: none;
     text-align: left;
     float: left;
-    width: 40% !important;
+    width: 60% !important;
     border-radius: 5px;
     overflow-y: auto;
     overflow-x: hidden;
